// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adds canonical link to head correctly applies a trailing slash to the canonical link when set 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        <link
          data-baseHost="someurl.com"
          data-baseProtocol="http:"
          data-trailingSlash="true"
          href="http://someurl.com/somepost/"
          rel="canonical"
        />,
      ],
    ],
  ],
}
`;

exports[`Adds canonical link to head correctly creates a canonical link if siteUrl is set 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        <link
          data-baseHost="someurl.com"
          data-baseProtocol="http:"
          data-trailingSlash="false"
          href="http://someurl.com/somepost"
          rel="canonical"
        />,
      ],
    ],
  ],
}
`;

exports[`Adds canonical link to head correctly does not create a canonical link if siteUrl is not set 1`] = `[MockFunction]`;
